Changes in version 2.6-1

  o Restore older version of splitCmd().
  
Changes in version 2.6-0

  o Linear and generalized linear mixed models dialogs added.
  
  o Made editDataset() with data.frame method (suggestion of Ulrike Gromping).
  
  o New R Commander hex sticker.
  
  o Small fixes and improvements.
  
  o Updated translations (with thanks to): Chinese (Tsung-wu Ho), Indonesian (I Made Tirta), Japanese (Takaharu Araki), Polish (Lukasz Daniel), Romanian (Adrian Dusa),  Russian (Alexey Shipunov), Slovenian (Matjaz Jeran), Spanish (Manuel Munoz Marquez).
  
Changes in version 2.5-3

  o Updated Slovenian translation (thanks to Matjaz Jeran).

  o Small fixes.

Changes in version 2.5-2

  o Updated Korean translation (thanks to Jong-Hwa Shin).
  
  o Fixes to Chinese translation (thanks to Tsung-wu Ho).
  
  o No longer re-export utils::data() (suggestion of Brian Ripley).
  
  o Small fixes.
  
Changes in version 2.5-1

  o Updated translations (with thanks): Basque (Jose Ramon Rueda), French (Milan Bouchet-Valat), Indonesian (I Made Tirta), Japanese (Takaharu Araki).
  
  o Depend on R >= version 3.5.0.

Changes in version 2.5-0

  o Added Predictor Effect Plots and Response Transformation dialogs to Models menu.
  
  o New Transform Variables Toward Normality dialog in Statistics > Summaries menu.
  
  o New Symmetry Boxplot dialog in Graphs menu.
  
  o New Influence Index Plot dialog in Models > Graphs menu.
  
  o QQ plots may be drawn by groups.
  
  o Index plots may be marked by groups.
  
  o Enhancements to Density Plot dialog.
  
  o Interface improvements.
  
  o Updated translations (with thanks): Chinese (Tsung-wu Ho), Indonesian (I Made Tirta), Polish (Lukasz Daniel), Russian (Alexey Shipunov), Spanish (Manuel Munoz Marquez).

Changes in version 2.4-4

  o Fixed bug in recode dialog due to inconsistency with Recode() in car 3.0-0 (reported by Stylianos Serghiou).
  